# cls-servicios-mcp

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json
.cursor/: mcp.json
.kiro/settings/: mcp.json
.ml-backup/: class-context-layer.ts.165407.bak  code-emitter.ts.140238.bak  code-emitter.ts.140239.bak  code-emitter.ts.140826.bak  code-emitter.ts.155344.bak  code-emitter.ts.160733.bak  code-emitter.ts.165553.bak  code-emitter.ts.171902.bak  code-emitter.ts.175209.bak  code-emitter.ts.175225.bak  code-emitter.ts.175439.bak  code-emitter.ts.175959.bak  primeng-mapper.ts.172826.bak  primeng-mapper.ts.175148.bak  project-orchestrator.ts.141042.bak  project-orchestrator.ts.160733.bak  template-generator.ts.140826.bak  template-generator.ts.180239.bak  template-generator.ts.180245.bak  template-generator.ts.194624.bak  template-generator.ts.200933.bak  template-integrity-layer.ts.200603.bak
mcp-ml-optimizer/: README.md  errores_v2.sql  pyproject.toml  requirements.txt  schema_v2.sql
mcp-ml-optimizer/mcp_ml_optimizer/: __init__.py  classifier.py  db.py  llm.py  main.py  patcher.py
src/: README.md  cli.ts  commands.ts  http-server.ts  index.ts  migrate-cli.ts  server.ts  stdio-server.ts  types.ts
src/analyzers/: appscript.analyzer.ts  react-component.analyzer.ts
src/emitter/: code-emitter.ts
src/generators/: appscript-component.generator.ts  appscript-service.generator.ts  component.generator.ts  module-generator.ts  primeng-mapper.generator.ts  service.generator.ts  shell-generator.ts  theme-injector.generator.ts
src/ml/: classifier.ts  (+6 more)
(+72 files in other folders)
